--- a/Design_resume/index.html
+++ b/Design_resume/index.html
@@ -60,8 +60,9 @@
                     <div class="name">
                         <h2>Ok Hyun Woo</h2>
                         <p>1998.01.05</p>
-                        <p><a href="tel:01023035996">TEL : 010 2303 5996</a></p>
-                        <p><a href="mailto:dnflsmstltk@naver.com">mail : dnflsmstltk@naver.com</a></p>
+                        <p><a href="tel:01023035996">TEL: 010 2303 5996</a></p>
+                        <p><a href="mailto:dnflsmstltk@naver.com">mail: dnflsmstltk@naver.com</a></p>
+                        <p><a href="https://github.com/okji98">github: https://github.com/okji98</a></p>
                     </div>
                 </div>
                 <div class="center">
@@ -69,24 +70,20 @@
                         <h2>SKILLS</h2>
                         <ul>
                             <li>
-                                <p>html<span>90%</span></p>
-                                <div class="bar"></div>
-                            </li>
-                            <li>
-                                <p>css<span>90%</span></p>
-                                <div class="bar"></div>
-                            </li>
-                            <li>
-                                <p>JavaScript(JQuery)<span>80%</span></p>
+                                <p>Java<span>80%</span></p>
                                 <div class="f_bar"></div>
                             </li>
                             <li>
-                                <p>Photoshop<span>70%</span></p>
-                                <div class="p_bar"></div>
+                                <p>SpringBoot<span>80%</span></p>
+                                <div class="f_bar"></div>
                             </li>
                             <li>
-                                <p>Figma<span>80%</span></p>
-                                <div class="f_bar"></div>
+                                <p>html<span>80%</span></p>
+                                <div class="bar"></div>
+                            </li>
+                            <li>
+                                <p>css<span>80%</span></p>
+                                <div class="bar"></div>
                             </li>
                         </ul>
                     </div>
@@ -97,6 +94,7 @@
                             <li>
                                 <h3>EDUCATION</h3>
                                 <p>2023 연희직업전문학교<br>(디지털디자인)웹표준 반응형 웹디자인&amp;웹퍼블리셔 양성과정 수료</p>
+                                <p>2025 연희직업전문학교<br>AWS 클라우드 환경의 AI 적용 백엔드 API 서버 개발자 양성 과정 수료</p>
                             </li>
                             <li>
                                 <h3>LICENSE</h3>
@@ -108,7 +106,7 @@
                             <svg version="1.1" viewBox="0 0 700 300">
                             <symbol id="fade-text">
                                 <text x="31%" y="40%" text-anchor="middle">
-                                    아직은 부족한 신입이지만
+                                    아직은 부족한 백엔드 신입이지만
                                 </text>
                                 <text x="35%" y="60%" text-anchor="middle">
                                     코딩을 사랑하는만큼 업무도
@@ -286,12 +284,13 @@
                             <span class="text"></span>
                             <span class="blink">|</span>
                         </div>
-                        <p class="t_p">'끈기와 도전'을 통해 유쾌하게 성장하는<br>퍼블리셔가 되겠습니다.</p>
+                        <p class="t_p">'끈기와 도전'을 통해 유쾌하게 성장하는<br>백엔드 개발자가 되겠습니다.</p>
                     </div>
                     <div class="b_title">
                         <p>Name | Ok Hyun Woo</p>
                         <p>phone | <a href="tel:01023035996">010 2303 5996</a></p>
                         <p>Email | <a href="mailto:dnflsmstltk@naver.com">dnflsmstltk@naver.com</a></p>
+                        <p>github | <a href="https://github.com/okji98">https://github.com/okji98</a></p>
                     </div>
                 </div>
             </div>
