--- a/Design_resume/index.html
+++ b/Design_resume/index.html
@@ -79,11 +79,11 @@
                             </li>
                             <li>
                                 <p>html<span>80%</span></p>
-                                <div class="bar"></div>
+                                <div class="f_bar"></div>
                             </li>
                             <li>
                                 <p>css<span>80%</span></p>
-                                <div class="bar"></div>
+                                <div class="f_bar"></div>
                             </li>
                         </ul>
                     </div>
