--- a/portfolio2/index.html
+++ b/portfolio2/index.html
@@ -203,11 +203,6 @@
         <div class="wrap">
             <div class="heard fl">
                 <h2>분야별 <span>정보</span></h2>
-                <span>
-                    <i class="xi-angle-left-min"></i>
-                    <i class="xi-pause"></i>
-                    <i class="xi-angle-right-min"></i>
-                </span>
             </div>
             <div class="list fl">
                 <ul class="depth01">
@@ -283,7 +278,7 @@
         <div class="wrap">
             <ul class="fl">
                 <li>
-                    <a href="#" class="xi-angle-left"></a>
+                    <a href="#" class="fz50"><</a>
                 </li>
                 <li>
                     <a href="#">
@@ -337,7 +332,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="xi-angle-right"></a>
+                    <a href="#" class="fz50">></a>
                 </li>
             </ul>
         </div>
@@ -447,8 +442,8 @@
                         </a>
                     </li>
                 </ul>
-                <a href="#" class="l_btn"><i class="xi-angle-left"></i></a>
-                <a href="#" class="r_btn"><i class="xi-angle-right"></i></a>
+                <a href="#" class="l_btn fz50"><</a>
+                <a href="#" class="r_btn fz50">></a>
             </div>
             <div class="r_bnr">
                 <div class="word">
@@ -498,9 +493,9 @@
                     </div>
                     <div class="play pc">
                         <div>
-                            <a href="#" class="l_btn"><i class="xi-angle-left"></i></a>
-                            <a href="#" class="l_stop"><i class="xi-pause"></i></a>
-                            <a href="#" class="r_btn"><i class="xi-angle-right"></i></a>
+                            <a href="#" class="l_btn fz50"><</a>
+                            <a href="#" class="l_stop fz50">■</a>
+                            <a href="#" class="r_btn fz50">></a>
                         </div>
                         <span class="bar pc"></span>
                     </div>
