--- a/Design_resume/index.html
+++ b/Design_resume/index.html
@@ -78,6 +78,10 @@
                                 <div class="f_bar"></div>
                             </li>
                             <li>
+                                <p>PostgreSQL<span>70%</span></p>
+                                <div class="p_bar"></div>
+                            </li>
+                            <li>
                                 <p>html<span>80%</span></p>
                                 <div class="f_bar"></div>
                             </li>
@@ -105,7 +109,7 @@
                         <div class="drawsvg">
                             <svg version="1.1" viewBox="0 0 700 300">
                             <symbol id="fade-text">
-                                <text x="31%" y="40%" text-anchor="middle">
+                                <text x="39%" y="40%" text-anchor="middle">
                                     아직은 부족한 백엔드 신입이지만
                                 </text>
                                 <text x="35%" y="60%" text-anchor="middle">
@@ -131,8 +135,86 @@
         <div class="section portfolio" id="section2">
             <div class="slide" id="slide1">
                 <div class="vis">
-                    <div class="title">
+                    <div class="title t1">
                         <p>PORTFOLIO <span>01</span></p>
+                    </div>
+                    <div>
+                        <h2>Java-algorithm</h2>
+                        <ul>
+                            <li>#JAVA</li>
+                            <li>#ALGORITHM</li>
+                        </ul>
+                        <dl>
+                            <dd>Language <span>Java</span></dd>
+                            <dd>Algorithm Type <span>Data Structure & Problem Solving</span></dd>
+                            <dd>Platform <span>프로그래머스</span></dd>
+                            <dd>Development Period <span>3months</span></dd>
+                            <dd>Year <span>2025</span></dd>
+                        </dl>
+                        <h3>EPILOGUE</h3>
+                        <p>자바를 활용한 알고리즘 문제 해결 과정입니다. 학원에서 배우는 수업 외에도 프래그래머스 코딩테스트의 다양한 자료구조(스택, 큐, 트리, 그래프)와 정렬, 탐색, 동적계획법 등의 알고리즘을 구현하며 논리적 사고력과 문제 해결 능력을 향상시켰습니다. 효율적인 코드 작성 능력을 기를 수 있었던 과정이였습니다.</p>
+                        <a href="https://github.com/okji98/java_example" class="fa" target="_blank">Github</a>
+                    </div>
+                </div>
+            </div>
+            <div class="slide" id="slide2">
+                <div class="vis">
+                    <div class="title t2">
+                        <p>PORTFOLIO <span>02</span></p>
+                    </div>
+                    <div>
+                        <h2>Spring Security Login</h2>
+                        <ul>
+                            <li>#Spring Security</li>
+                            <li>#OAuth 2.0</li>
+                            <li>#JWT</li>
+                            <li>#PostgreSQL</li>
+                            <li>#Thymeleaf</li>
+                        </ul>
+                        <dl>
+                            <dd>Tech Stack <span>Spring Boot, Spring Security</span></dd>
+                            <dd>Database <span>PostgreSQL, JPA</span></dd>
+                            <dd>OAuth Providers <span>Google, Kakao, Naver</span></dd>
+                            <dd>Development Period <span>1weeks</span></dd>
+                            <dd>Year <span>2025</span></dd>
+                        </dl>
+                        <h3>EPILOGUE</h3>
+                        <p>Spring Security를 활용한 다중 로그인 시스템 구현 프로젝트입니다. 일반 로그인과 소셜 로그인(Google, Kakao, Naver)을 통합하여 사용자 편의성을 높였습니다. JWT 토큰 기반 인증과 OAuth 2.0을 학습하며 보안과 사용자 경험을 모두 고려한 인증 시스템을 구축할 수 있었습니다.</p>
+                        <a href="https://github.com/okji98/springSecurityLogin" class="fa" target="_blank">GitHub</a>
+                    </div>
+                </div>
+            </div>
+            <div class="slide" id="slide3">
+                <div class="vis">
+                    <div class="title t3" style="background-color:#fadcb8;">
+                        <p>PORTFOLIO <span>03</span></p>
+                    </div>
+                    <div>
+                        <h2>Fairytale App</h2>
+                        <ul>
+                            <li>#Flutter</li>
+                            <li>#Spring Boot</li>
+                            <li>#Python FastAPI</li>
+                            <li>#PostgreSQL</li>
+                            <li>#AWS</li>
+                        </ul>
+                        <dl>
+                            <dd>Project Type <span>AI 기반 모바일 앱</span></dd>
+                            <dd>Team <span>3명 풀스택 협업</span></dd>
+                            <dd>Tech Stack <span>Flutter + Spring Boot + Python</span></dd>
+                            <dd>Development Period <span>36days</span></dd>
+                            <dd>Year <span>2025</span></dd>
+                        </dl>
+                        <h3>EPILOGUE</h3>
+                        <p>AI 기반 개인화 동화생성 모바일 애플리케이션입니다. OpenAI GPT와 Stability AI를 활용한 동화 및 이미지 생성, OAuth 2.0 소셜 로그인, AWS 클라우드 인프라 구축 등 최신 백엔드 기술을 종합적으로 활용했습니다. 특히 API 연동의 중요성과 RestTemplate 개념 학습, JWT 발급 로직 정립 등 확장 가능한 백엔드 서비스 개발 경험을 쌓을 수 있었습니다.</p>
+                        <a href="https://github.com/okji98/fairytale_project" class="fa" target="_blank">Github</a>
+                    </div>
+                </div>
+            </div>
+            <div class="slide" id="slide4">
+                <div class="vis">
+                    <div class="title">
+                        <p>PORTFOLIO <span>04</span></p>
                     </div>
                     <div>
                         <h2>Web Publishing</h2>
@@ -153,14 +235,14 @@
                         </dl>
                         <h3>EPILOGUE</h3>
                         <p>제이쿼리를 배우고, 반응형 웹디자인을 반영하여 만든 작업물입니다. 관공서사이트의 특징으로 많은 메뉴와 어려운 구조때문에 작업 초반 어려움을 겪었지만, 코딩을 직접하면서 HTML마크업과 CSS의 활용을 숙련하게되었던 사이트입니다.</p>
-                        <a href="http://dnflsmstltk1.dothome.co.kr/portfolio1" class="fa" target="_blank">Website</a>
+                        <a href="https://okji98.dothome.co.kr/portfolio1/" class="fa" target="_blank">Website</a>
                     </div>
                 </div>
             </div>
-            <div class="slide" id="slide2">
+            <div class="slide" id="slide5">
                 <div class="vis">
-                    <div class="title t2">
-                        <p>PORTFOLIO <span>02</span></p>
+                    <div class="title t5">
+                        <p>PORTFOLIO <span>05</span></p>
                     </div>
                     <div>
                         <h2>Web Publishing</h2>
@@ -181,14 +263,14 @@
                         </dl>
                         <h3>EPILOGUE</h3>
                         <p>제이쿼리를 활용해 다양한 기능을 구현해 낸 사이트입니다.탭 메뉴와 슬라이드의 대해 더 심층적으로 배울 수 있었고, 코딩의 흥미를 한 껏 높여준 작업물입니다.탭 메뉴를 만들며 INDEX 순서의 어려움을 겪었었는데 반복 작업을 통하여 숙련하게되었습니다.</p>
-                        <a href="http://dnflsmstltk1.dothome.co.kr/portfolio3" class="fa" target="_blank">Website</a>
+                        <a href="https://okji98.dothome.co.kr/portfolio3/" class="fa" target="_blank">Website</a>
                     </div>
                 </div>
             </div>
-            <div class="slide" id="slide3">
+            <div class="slide" id="slide6">
                 <div class="vis">
-                    <div class="title t3">
-                        <p>PORTFOLIO <span>03</span></p>
+                    <div class="title t6">
+                        <p>PORTFOLIO <span>06</span></p>
                     </div>
                     <div>
                         <h2>Web Publishing</h2>
@@ -209,14 +291,14 @@
                         </dl>
                         <h3>EPILOGUE</h3>
                         <p>숫자카운팅과 스크롤매직에 대해 알게된 작업물입니다.처음 사용해보는 기능이라 구조 자체에 어려움을 겪었지만, 구글링을 통한 배움으로 작업을 마무리하였습니다. 하지만 아직 부족한 부분이 있기에 이후 배움을 통해 확실하게 제 것으로 만들겠습니다.</p>
-                        <a href="http://dnflsmstltk1.dothome.co.kr/portfolio4" class="fa" target="_blank">Website</a>
+                        <a href="https://okji98.dothome.co.kr/portfolio4/" class="fa" target="_blank">Website</a>
                     </div>
                 </div>
             </div>
-            <div class="slide" id="slide4">
+            <!-- <div class="slide" id="slide7">
                 <div class="vis">
-                    <div class="title t4">
-                        <p>PORTFOLIO <span>04</span></p>
+                    <div class="title t7">
+                        <p>PORTFOLIO <span>07</span></p>
                     </div>
                     <div>
                         <h2>Web Publishing</h2>
@@ -235,10 +317,10 @@
                         </dl>
                         <h3>EPILOGUE</h3>
                         <p>코딩을 배우고, 반응형 웹디자인을 반영하여 가장 처음 만든 작업물이기 때문에 부족함이 많이 느껴지는 작업이였습니다. 전반전으로 조금 미약한 사이트여서 아쉬움이 남지만 코딩을 직접하면서 PC버전과 모바일 버전 모두 사용자 입장에서 편리하게 사용할 수 있도록 생각을 많이하며 작업하였습니다. 또한 들여쓰기에 익숙해져 작업의 편이성을 많이 익혔습니다.</p>
-                        <a href="http://dnflsmstltk1.dothome.co.kr/portfolio2" class="fa" target="_blank">Website</a>
+                        <a href="https://okji98.dothome.co.kr/portfolio2/" class="fa" target="_blank">Website</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="section process" id="section3">
             <div class="pbt">
